Make content settings non-filterable

Content Settings don't need to be filterable and using
WebsiteSettingsFilterAdapter doesn't work in some cases.

Bug: 741934
Change-Id: I765cd9683079fa7592afc3aedc0ea0f243d782ed